--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,6 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+org.gradle.java.home.mac=/Library/Java/JavaVirtualMachines/jdk-17.jdk/Contents/Home
+org.gradle.java.home.windows=C:\\Program Files\\Java\\jdk-17
