--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,17 @@ dependencies:
   bloc:
   flutter_bloc:
   equatable: 
-  dio: 
+  dio:
+  freezed_annotation:
+  json_annotation:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
+  build_runner:
+  freezed:
+  json_serializable:
+
   flutter_lints: ^4.0.0
 
 flutter:
